applications/booking_info/3_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: productpage
  namespace: bookinfo
  labels:
    app: productpage
    service: productpage
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: productpage-bookinfo.apps-crc.testing
  to:
    kind: Service
    name: productpage
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
